# local_transcription_local_dev

./: .gitignore  CLAUDE.md  Dockerfile  README.md  blog.md  docker-compose.yml  hviske_inspiration.py  main.py  models.py  product_requirements.md  pyproject.toml  requirements.txt  test.m4a  test_api.py  test_cuda.py  test_hviske2.py  test_transcriber.py  transcriber.py
tests/: test_transcribe_endpoint.py
