[project]
name = "local-transcription-local-dev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "asyncio>=4.0.0",
    "datasets>=4.6.1",
    "fastapi>=0.135.1",
    "librosa>=0.11.0",
    "nvidia-ml-py==11.525.112",
    "python-multipart>=0.0.22",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]
